# Librett

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE.md  Makefile  Makefile.complex  Makefile.cuda  Makefile.hip  Makefile.sycl  README.md  dpcpprocm_toolchain.cmake
cmake/: librett-config.cmake.in
original/: profile.0.0.0  profile.0.0.1  profile.0.0.2
src/: .cutt_bench.cpp.swp  CMakeLists.txt  CudaMem.cpp  CudaMemcpy.cpp  CudaMemcpy.h  CudaUtils.cpp  CudaUtils.h  GpuMem.cpp  GpuMem.h  GpuMem.hpp  GpuMemcpy.cpp  GpuMemcpy.cu  GpuMemcpy.h  GpuModel.cpp  GpuModel.h  GpuModelKernel.cpp  GpuModelKernel.cu  GpuModelKernel.h  GpuUtils.cpp  GpuUtils.cu  GpuUtils.h  Mem.cpp  Mem.h  Memcpy.cpp  Memcpy.cu  Memcpy.h  TensorTester.cpp  TensorTester.cu  TensorTester.h  Timer.cpp  Timer.h  Types.h  Utils.cpp  Utils.cu  Utils.h  calls.h  cutt.cpp  cutt.h  cuttGpuModel.cpp  cuttGpuModel.h  (+25 more)
src/dpct/: device.hpp  dpct.hpp
src/dpct/dpl_extras/: memory.h  vector.h
tests/: CMakeLists.txt  example.cpp  librett_bench.cpp  librett_test.cpp
